# pdag

./: .env  .env.pytest  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  README.md  justfile  mkdocs.yml  pdag_pydantic_design_options.md  pdag_pydantic_vision.md  pyproject.toml  renovate.json5  ruff.toml  versions.json
.github/workflows/: deploy-docs.yaml  release.yaml  test.yaml
0.0.11/: 404.html  index.html  sitemap.xml
0.0.11/development/testing/: index.html
0.0.12/: 404.html  index.html  sitemap.xml
0.0.12/development/testing/: index.html
0.0.12/reference/SUMMARY/: index.html
0.0.12/reference/pdag/: index.html
0.0.12/reference/pdag/examples/: index.html
0.0.12/search/: search_index.json
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/development/testing/: index.html
dev/reference/SUMMARY/: index.html
dev/reference/pdag/: index.html
dev/reference/pdag/examples/: index.html
dev/reference/pdag/examples/diamond_mdp/: index.html
dev/reference/pdag/examples/polynomials/: index.html
dev/reference/pdag/examples/square/: index.html
dev/reference/pdag/examples/squares/: index.html
dev/reference/pdag/utils/: index.html
dev/search/: search_index.json
docs/development/: testing.md
example/: umbrella.py  umbrella_nb.py
examples/: building.py  building_nb.py  building_ts.py  umbrella.py  umbrella2.py
scripts/: gen_pages.py
src/pdag/: __init__.py  _base.py  _cli.py  _core.py  _decorator.py  _decorators.py  _exec.py  _model.py  _node.py  _parameter.py  _relationship.py  utils.py
src/pdag/_core/: __init__.py  builder.py  collection.py  model.py  parameter.py  reference.py  relationship.py
src/pdag/_exec/: __init__.py  core.py  exec_via_paramref.py  model.py  ref_resolver.py  to_exec_model.py  utils.py
src/pdag/_experiment/: __init__.py  cases.py  distance_sampling.py  multi_process.py  results.py  runner.py
src/pdag/_experimental/: __init__.py  _core.py  _notation.py  utils.py
src/pdag/_export/: __init__.py  dot.py  html.py  watch.py
src/pdag/_export/assets/: graph.j2
src/pdag/_notation/: __init__.py  _decorators.py  construct.py  decorators.py  model.py
src/pdag/_server/: _model.py
src/pdag/_static/: _relationship.py  _variable.py
src/pdag/_utils/: __init__.py  _ast_utils.py  _dict_utils.py  _init_args_recorder.py  multidef.py  random_string.py
src/pdag/examples/: __init__.py  _diamond_mdp.py  _each_squared.py  _polynomials.py  _square.py  _squares.py  _treasure.py  _umbrella.py  building_expansion.py  diamond_mdp.py  polynomials.py  square.py  squares.py
src/pdag/ts/: __init__.py  _model.py  _parameter.py  _utils.py
src/pdag/utils/: __init__.py  _ast_utils.py  _dict_utils.py  _init_args_recorder.py  _multidef.py  _nested_list.py  _topological_sort.py
src/xlrm/: __init__.py
src/xlrm/_static/: _model.py  _relationship.py  _variable.py
tests/: test_examples.py  test_notation.py
tests/exec/: test_diamond_mdp.py  test_polynomials.py
tests/notation/: cases.py  test_conversion.py  test_notation.py
tests/server/: test_model.py
tests/server/test_model/: react_flow_graph.json
tests/utils/: test_ast_utils.py  test_dict_utils.py  test_multidef.py
